# index-engine-hs

./: CHANGELOG.md  index-engine-hs.cabal
.github/workflows/: haskell.yml
data/: sample_output.csv
exe/: Main.hs
src/: EqualWeightStrategy.hs  MarketData.hs  Runner.hs  Schedule.hs  StateStore.hs  Strategy.hs
test/: CacheInvalidationSpec.hs  EqualWeightStrategySpec.hs  ErrorHandlingSpec.hs  IntegrationSpec.hs  MarketDataSpec.hs  PerformanceSpec.hs  RecursionSpec.hs  RunnerSpec.hs  ScheduleSpec.hs  StateStoreSpec.hs
test/data/: large_prices.csv  performance_prices.csv
