cabal-version:   3.6
name:            index-engine-hs
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          Λ
maintainer:      sobakavosne@protonmail.com
category:        Data
build-type:      Simple
extra-doc-files: CHANGELOG.md

common shared-deps
  build-depends:
    , base        ^>=4.17.2.0
    , bytestring
    , cassava     ^>=0.5.3.0
    , containers
    , stm
    , text
    , time
    , vector

  default-language: Haskell2010
  ghc-options:      -Wall

library
  import:           shared-deps
  exposed-modules:
    EqualWeightStrategy
    MarketData
    Runner
    Schedule
    StateStore
    Strategy

  hs-source-dirs:   src
  default-language: Haskell2010

executable index-engine-hs
  import:           shared-deps
  main-is:          Main.hs
  build-depends:    index-engine-hs
  hs-source-dirs:   exe
  default-language: Haskell2010

test-suite index-engine-hs-test
  import:           shared-deps
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    ScheduleSpec
    StateStoreSpec
    MarketDataSpec
    EqualWeightStrategySpec
    RunnerSpec
    IntegrationSpec
    ErrorHandlingSpec
    CacheInvalidationSpec
    PerformanceSpec
    RecursionSpec

  build-depends:
    , hspec
    , hspec-discover
    , directory
    , index-engine-hs
    , QuickCheck

  ghc-options:      -threaded -with-rtsopts=-N

  hs-source-dirs:   test
  default-language: Haskell2010
